--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "playwright": "^1.46.1",
     "puppeteer": "^23.2.1"
   }
 }
